--- a/weather app/index.html
+++ b/weather app/index.html
@@ -4,43 +4,88 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-
-    <link rel="stylesheet" href="style.css" />
+    <title>Weather App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>
-    <div id="app">
-      <div id="root">
-        <img class="loader" src="./img/loader.gif" alt="loader" />
+
+  
+  <body>    
+    <div class="container">
+      <div class="search-box">
+        <i class="fa-solid fa-location-dot"></i>
+        <input type="text" placeholder="Enter your location" />
+        <button class="fa-solid fa-magnifying-glass"></button>
+        <div id="nameDisplay"></div>
       </div>
-
-      <div class="popup" id="popup">
-        <form action="GET" class="form" id="form">
-          <div class="form-group">
-            <input
-              type="text"
-              value=""
-              name="city"
-              class="form-input"
-              id="text-input"
-              placeholder="London"
-              required
-            />
-            <input
-              type="submit"
-              class="form-submit"
-              id="submit-button"
-              value="OK"
-            />
+      <div class="error">
+        <p>Invalid city name</p>
+      </div>
+      <div class="weather">
+        <div class="weather-image">
+          <i class="fa-solid fa-cloud"></i>
+        </div>
+        <h1 class="temp">22 &#8451</h1>
+        <h2 class="city">New York</h2>
+        <div class="details">
+          <div class="col">
+            <i class="fa-solid fa-water"></i>
+            <div>
+              <p class="humidity">50%</p>
+              <p>Humidity</p>
+            </div>
           </div>
-        </form>
-
-        <div class="popup-close" id="close">
-          <span></span>
+          <div class="col">
+            <i class="fa-solid fa-wind"></i>
+            <div>
+              <p class="wind">15 km/h</p>
+              <p>Wind Speed</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+    <div id="overlay">
+      <div class="popup">
+        <p><strong><ins>Enter your first and last name: </p>
+        <p><br></p>
+        <form onsubmit="return false;">
+          <label>Surname: <input type="text" value="" size="25" id="f"></label>
+          <label>Name: <input type="text" value="" size="25" id="n"></label>
+          <input
+            type="button"
+            value="Further" 
+            size="25"
+            onClick="Hello()"
+          >
+        </form>
+        <button
+          class="close"
+          title="Закрыть"
+          onclick="document.getElementById('overlay').style.display='none';"
+        ></button>
+        <script>
+          function Hello() {
+            const nameInput = document.getElementById("f");
+            const nameDisplay = document.getElementById("nameDisplay");
 
-    <script src="./script.js"></script>
+            nameDisplay.innerHTML =
+              "Hello" + "\n" +
+              nameInput.value +
+              " " +
+              document.getElementById("n").value;
+            return false;
+          }
+        </script>
+      </div>
+    </div>
+    <script src="./main.js"></script>
   </body>
 </html>
